2002-08-12  Braden McDaniel  <braden@endoframe.com>

        * src/openvrml/OpenVRML/field.cpp: Workarounds for a bug in
          gcc 3.1.

2002-08-04  Braden McDaniel  <braden@endoframe.com>

        * Refactored VrmlScene into Browser and Scene; Node now contains
          a pointer to its associated Scene. Nodes are added to a Scene
          with Node::initialize.

2002-08-02  Thomas Flynn  <tflynn@users.sourceforge.net>

        * Continue updating conformance test results.

2002-07-22  Thomas Flynn  <tflynn@users.sourceforge.net>

        * Continue updating conformance test results.

2002-07-18  Thomas Flynn  <tflynn@users.sourceforge.net>

        * Fix a number of problems in the JSAI code.

        * Add additional javadoc comments to Java classes.

        * Improve output format of SFImage::print.

        * Update conformance test results.

2002-07-12  Braden McDaniel  <braden@endoframe.com>

        * src/openvrml/OpenVRML/Vrml97Parser.g,
          src/openvrml/OpenVRML/Vrml97Parser.cpp,
          src/openvrml/OpenVRML/Vrml97Parser.hpp,
          src/openvrml/OpenVRML/VrmlScene.cpp:  Removed Doc2 parameter
          from parser methods.  This parameter is unused now that we
          no longer use VrmlNamespace.

2002-07-11  Braden McDaniel  <braden@endoframe.com>

        * src/openvrml/OpenVRML/vrml97node.cpp:  Fixed several places
          in recalcBSphere methods where child nodes weren't checked for
          being NULL.

2002-07-10  Braden McDaniel  <braden@endoframe.com>

        * src/lookat/ViewerGlut.cpp, src/lookat/lookat.cpp,
          src/openvrml/OpenVRML/Image.cpp,
          src/openvrml-gl/OpenVRML/GL/ViewerOpenGL.cpp:  Sun Forte
          compiler complains if callbacks passed to 'extern "C"'
          functions are not themselves 'extern "C"'.  Solution:  provide
          'extern "C"' typedefs and cast to them.

2002-07-09  Braden McDaniel  <braden@endoframe.com>
